# dbfbucket

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/: __init__.py  dbfbucket.pyi
src/: lib.rs  main.rs
test_data/: test.csv
