[package]
name = "dbf-rs"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dbfbucket"

[dependencies]
arrow = { version = "37.0", default-features = false }
byteorder = "1.4"
chrono = "=0.4.38"
csv = "1.3"
memmap2 = "0.9"
num-traits = "0.2"
parquet = { version = "37.0", default-features = false, features = ["arrow"] }
pyo3 = { version = "0.28", features = [
  "experimental-inspect",
  "extension-module"
] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
