[project]
name = "dbfbucket"
version = "0.1.0"
description = "Library for reading DBF files"
readme = "README.md"
requires-python = ">=3.8,<3.13"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
]
dependencies = []  # Pure Rust, no Python deps

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
